--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,8 @@ elseif(CMAKE_CXX_COMPILER_ID STREQUAL "XL")
 endif()
 
 if(ENABLE_AVX)
+  set(HPTT_CXX_FLAGS ${HPTT_CXX_FLAGS} -mavx2 -mavx512f -DHPTT_ARCH_AVX -DHPTT_ARCH_AVX512)
+elseif(ENABLE_AVX512)
   set(HPTT_CXX_FLAGS ${HPTT_CXX_FLAGS} -mavx -DHPTT_ARCH_AVX)
 elseif(ENABLE_ARM)
   set(HPTT_CXX_FLAGS ${HPTT_CXX_FLAGS} -mfpu=neon -DHPTT_ARCH_ARM)
